--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./6/index.html>Latest Test Results - RUN ID: 6</a><br>
+├── <a href=./7/index.html>Latest Test Results - RUN ID: 7</a><br>
+├── <a href=./6/>RUN ID: 6</a><br>
 </html>
