--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./7/index.html>Latest Test Results - RUN ID: 7</a><br>
+├── <a href=./9/index.html>Latest Test Results - RUN ID: 9</a><br>
+├── <a href=./7/>RUN ID: 7</a><br>
 ├── <a href=./6/>RUN ID: 6</a><br>
 </html>
